src/app/components/layout/navbar.module.css
.header {
  height: 100%;
  margin-bottom: 25px;
  background-color: var(--mantine-color-body);
  border-bottom: 1px solid
    light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
}

.inner {
  height: 100%;
  width: auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
  --container-size: var(--container-size-md);
}

.logo {
  display: flex;
  align-items: center;
  flex: 0 10 20rem;
  height: 1.5rem;
  padding: 0;
  margin: 0;
  margin-right: 1rem;
  z-index: 13;

  img {
    width: 100%;
    height: auto;
  }

  a {
    display: flex;
    align-items: center;
  }
}

.inner_end {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin: 0;
  padding: 0;
  z-index: 13;

  @media (max-width: $mantine-breakpoint-sm) {
    width: 5rem;
  }

  button:last-child {
    --burger-size: var(--burger-size-sm);

    @media (min-width: $mantine-breakpoint-sm) {
      visibility: hidden;
    }
  }
}

.link {
  display: block;
  line-height: 1;
  padding: 8px 12px;
  border-radius: var(--mantine-radius-sm);
  text-decoration: none;
  color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
  font-size: var(--mantine-font-size-sm);
  font-weight: 500;
  transition: background-color 0.3s;

  @media (max-width: $mantine-breakpoint-sm) {
    border-radius: 0;
  }

  &[data-active] {
    background-color: var(--mantine-color-blue-filled);
    color: var(--mantine-color-white);
  }

  @mixin hover {
    background-color: light-dark(
      var(--mantine-color-gray-2),
      var(--mantine-color-dark-6)
    );

    &[data-active] {
      background-color: var(--mantine-color-blue-filled);
    }
  }
}

.navbar {
  z-index: 11;
  div:nth-child(2) {
    display: none;
  }

  div:nth-child(3) {
    display: block;
    background-color: black;
    opacity: 0;
    visibility: hidden;
  }

  @media (max-width: $mantine-breakpoint-sm) {
    position: fixed;
    display: grid;
    visibility: hidden;
    top: 0;
    right: 0;
    width: 100%;
    height: 100%;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 11fr;
    grid-template-areas: "header header" "overlay links";
    gap: 0;

    div:nth-child(1) {
      display: block;
      visibility: hidden;
      min-height: 3.8rem;
    }

    div:nth-child(2) {
      display: block;
      position: absolute;
      top: 0;
      right: -100%;
      width: 100%;
      height: 100%;
      grid-area: links;
      background-color: light-dark(
        var(--mantine-color-gray-0),
        var(--mantine-color-dark-7)
      );
      transition: 0.3s;
      overflow-y: auto;
      z-index: 12;

      a {
        display: flex;
        margin-bottom: 1.5rem;
        align-items: center;

        svg {
          margin-right: 1rem;
        }
      }

      a:first-child {
        margin-top: 2rem;
      }
    }

    div:nth-child(3) {
      grid-row-start: overlay;
      grid-row-end: links;
      z-index: 11;
      transition: 0.3s;
    }
  }

  @media (max-width: $mantine-breakpoint-sm) and (min-aspect-ratio: 16/9) and (max-aspect-ratio: 22/9) and (orientation: landscape) {
    grid-template-rows: 1fr 6fr;
  }
}

.navbar_open {
  visibility: visible;

  div:nth-child(2) {
    right: 0;
  }

  div:nth-child(3) {
    opacity: 0.6;
    visibility: visible;
  }
}

.link_icon {
  @media (min-width: $mantine-breakpoint-sm) {
    display: none;
  }

  stroke-width: 1.5;
}

.theme_icon_loading {
  --ai-size: var(--ai-size-lg);
  --ai-bg: var(--mantine-color-default);
  --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid
    var(--mantine-color-default-border);

  svg {
    color: light-dark(var(--mantine-color-dark-7), var(--mantine-color-gray-0));
    animation: rotate 1s infinite;
  }
}

@keyframes rotate {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

